共通ページ更新

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,7 +22,7 @@
 
     <% @posts.each do |post| %>
     <div class="posts-index-item">
- <%= post %>
+    <%= post.content %>
  </div>
 
   <% end %>
