--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+  <header>
+  <div class="header-logo">
+    <a href="/">SpeakerApp</a>
+  </div>
+  <ul class="header-menus">
+    <li>
+      <a href="/about">SpeakerAppとは</a>
+    </li>
+  </ul>
+</header>
+
     <%= yield %>
   </body>
 </html>
