投稿後一覧に戻る

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,7 +2,9 @@
 
 <div class="main top-main">
   <div class="top-message">
-    <h2>The world is connected by voice</h2>
-    <p>今の気持ちをつたえよう！</p>
+    <h2>world connected voice</h2>
+    <br></br>
+    <br></br>
+    <p>Let's tell them how we feel</p>
   </div>
 </div>
