--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,7 +38,7 @@
   /* 共通レイアウト ================================ */
   body {
     color: #2d3133;
-    background-color: #1fd4d4;
+    background-color: #000202;
     margin: 0;
     min-height: 1vh;
   }
@@ -71,13 +71,13 @@
   .header-logo {
     float: left;
     padding-left: 20px;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 22px;
     line-height: 64px;
   }
   
   .header-logo a{
-    color: white;
+    color: rgb(11, 253, 201);
     font-size: 22px;
   }
   
@@ -97,7 +97,7 @@
   .header-menus a {
     float: left;
     font-size: 13px;
-    color: white;
+    color: rgb(23, 253, 215);
   }
   
   .header-menus .fa {
@@ -108,7 +108,7 @@
     padding: 0 20px;
     float: left;
     line-height: 64px;
-    color: rgb(229, 235, 229);
+    color: rgb(36, 255, 255);
     margin: 0;
     font-size: 13px;
   }
@@ -150,7 +150,7 @@
   /* about ================================ */
   .about-main {
     padding: 180px 8% 0;
-    color: white;
+    color: rgb(9, 231, 231);
   }
   
   .about-main h2 {
@@ -172,7 +172,7 @@
   .form {
     max-width: 600px;
     margin: 0 auto;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0 2px 6px #c1ced7;
   }
   
@@ -209,7 +209,7 @@
   }
   
   .form input[type="submit"] {
-    background-color: #3ecdc6;
+    background-color: #1cdac0;
     color: white;
     cursor: pointer;
     font-weight: 300;
