新規ページに戻る

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,12 @@
     </li>
   </ul>
 </header>
-<%= yield %>
-</body>
+    <% if flash[:notice] %>
+      <div class="flash">
+      <%=flash[:notice] %>
+      </div>
+    <% end %>
+    
+   <%= yield %>
+  </body>
 </html>
