--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -49,7 +49,7 @@
     width: 100%;
     height: auto;
     min-height: 100%;
-    background-color: #faf5fa;
+    background-color: #65c1ff;
   }
   
   .container {
@@ -180,7 +180,7 @@
     font-weight: 300;
     margin: 60px 0 20px;
     font-size: 48px;
-    color: #bcc8d4;
+    color: #ffffff;
   }
   
   .form-body {
@@ -209,7 +209,7 @@
   }
   
   .form input[type="submit"] {
-    background-color: #1cdac0;
+    background-color: #f5a938;
     color: white;
     cursor: pointer;
     font-weight: 300;
@@ -239,3 +239,6 @@
     border-radius: 0 0 2px 2px;
     font-size: 14px;
   }
+
+/* ローディング====================*/
+
