--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,21 +1,24 @@
 <div class="main posts-new">
   <div class="container">
    <h1 class="form-heading">投稿する</h1>
-   <%= form_tag("/posts/create") do %>
-    <div class="form">
-      <div class="form-body">
-      
-      <% @post.errors.full_messages.each do |message| %>
-        <div class="form-error">
-          <%= message %>
-        </div>
-      <% end %>
-
-      <textarea name="content"><%= @post.content %></textarea>
-      <input type="submit" value="投稿">
-      
-      </div>
-      </div>
-　<% end %>
-  </div>
-</div>
+   <%= form_with(model: @post, local: true ,url: choose_new_or_edit ) do |form| %>
+    <div id="main" style="background:white; padding-top:60px">
+    <div id="header">
+    <h3> Confirmation screen</h3>
+    </div>
+    <div id="content">
+    <h6>Send it with the following contents.</h6>
+    
+    <%= form_with(model: @post, url: posts_path) do |form| %>
+      <%= form.hidden_field :content %>
+    
+      <p>Body:<%= @post.content %></p>
+      <%= form.submit  "submit", style:'border:1px solid skyblue' %>
+    <% end %>
+    <%= form_with(model: @post, url: new_post_path, method: 'get') do |form| %>
+      <%= form.hidden_field :content %>
+      <div class="link">
+    <%= link_to 'Back', posts_path , style:'border:1px solid skyblue'%>
+    </div>
+    <% end %>
+    </div>
