--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -1,10 +1,20 @@
-<%= form_for @post do |f| %>
-    <%= @post.contents %>
-    <%= @post.day %>
-    <div class="actions">
-      <%= f.submit '投稿画面に戻る', name: 'back' %>
-    </div>
-    <div class="actions">
-      <%= f.submit '投稿する' %>
-    </div>
-  <% end %>
+<div id="main" style="background:white; padding-top:60px">
+<div id="header">
+<h3> Confirmation screen</h3>
+</div>
+<div id="content">
+<h6>Send it with the following contents.</h6>
+
+<%= form_with(model: @post, url: posts_path) do |form| %>
+  <%= form.hidden_field :content %>
+
+  <p>Body:<%= @post.content %></p>
+  <%= form.submit  "submit", style:'border:1px solid skyblue' %>
+<% end %>
+<%= form_with(model: @post, url: new_post_path, method: 'get') do |form| %>
+  <%= form.hidden_field :content %>
+  <div class="link">
+<%= link_to 'Back', posts_path , style:'border:1px solid skyblue'%>
+</div>
+<% end %>
+</div>
