削除機能修正

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -195,7 +195,7 @@
     width: 100%;
     border: 1px solid #d8dadf;
     padding: 10px;
-    color: #57575f;
+    color: #ff8d1b;
     font-size: 16px;
     letter-spacing: 2px;
     border-radius: 2px;
