--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -76,7 +76,7 @@
   }
   
   .post-menus a, .post-menus input {
-    color: #8899a6;
+    color: #000000;
     text-decoration: underline;
     font-size: 14px;
   }
