--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="main posts-new">
   <div class="container">
     <h1 class="form-heading">編集する</h1>
-    <%= form_with(model: @post, local: true ,url: choose_new_or_edit ) do |form| %>
+    <%= form_with(model: @post, local: true ) do |form| %>
       <div class="form">
         <div class="form-body">
         
@@ -10,7 +10,6 @@
               <%= message %>
             </div>
           <% end %>
-          
           
           <textarea name="content"><%= @post.content %></textarea>
           <input type="submit" value="保存">
